# advent-of-code

./: .gitignore  .project  .travis.yml  README.md  greenkeeper.json  input11b.txt  input6.txt  setupPuzzle.sh
.github/: dependabot.yml
.github/workflows/: ruby.yml  test.yml
2016/: input25.txt  test10.txt
2017/: input9.txt
2018/: .eslintrc  .gitignore  package.json  plopfile.js  test.js
2018/__tests__/: day1.test.js
2018/plop-templates/: index.js  parts.js
2018/scripts/: setupPuzzle.sh
2018/src/: day1.js  test.js
2018/utils/: Cell.js  Node.js  common.js  math.js  parseFile.js
2019/: .reek.yml  .rubocop.yml  Gemfile
2019/scripts/: setupPuzzle.sh
2019/src/: util.rb
2020/: pyproject.toml
2020/aoc_2020/: day1.py  day2.py  index.py  setup.py  utils.py
2020/tests/: test_aoc_2020.py  test_aoc_2020_day1.py  test_aoc_2020_day2.py
2021/: .rubocop.yml  Gemfile  setup_puzzle.rb
2021/spec/: day1_spec.rb  day2_spec.rb  day3_spec.rb  day4_spec.rb  day5_spec.rb  day6_spec.rb  day7_spec.rb  day8_spec.rb  day9_spec.rb
2021/src/: day1.rb  day2.rb  day3.rb  day4.rb  day5.rb  day6.rb  day7.rb  day8.rb  day9.rb  solver.rb  utils.rb
2021/templates/: code_template.rb.erb  test_template.rb.erb
src/advent16/: Day1.java  Day11.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day2.java  Day20.java  Day21Test.java  Day23.java  Day24.java  Day4.java  Day5.java  Day6.java  Day8.java  tools.java
src/advent17/: Day1.java  Day10.java  Day11.java  Day14.java  Day15.java  Day16.java  Day17.java  Day20.java  Day22.java  Day3.java  Day4.java  Day5.java  (+2 more)
(+80 files in other folders)
