[tool.poetry]
name = "aoc_2020"
version = "0.1.0"
description = ""
authors = ["Yassine Chbani <31844581+yassinecc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
